--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,51 @@ body {
     border-radius: 50%;
     margin-right: 1rem; }
 
+.sidebar .side-nav {
+  font-size: 1.4rem;
+  list-style: none;
+  margin-top: 3.5rem; }
+  .sidebar .side-nav__item {
+    position: relative; }
+    .sidebar .side-nav__item:not(:last-child) {
+      margin-bottom: .5rem; }
+  .sidebar .side-nav__item::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 3px;
+    background-color: #eb2f64;
+    transform: scaleY(0);
+    transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, background-color 0.1s; }
+  .sidebar .side-nav__item:hover::before, .sidebar .side-nav__item--active::before {
+    transform: scaleY(1);
+    width: 100%; }
+  .sidebar .side-nav__item--active::before {
+    background-color: #ff3366; }
+  .sidebar .side-nav__link:link, .sidebar .side-nav__link:visited {
+    color: #faf9f9;
+    text-decoration: none;
+    text-transform: uppercase;
+    display: block;
+    padding: 1.5rem 3rem;
+    display: flex;
+    position: relative;
+    align-items: center;
+    z-index: 10; }
+  .sidebar .side-nav__icon {
+    width: 1.75rem;
+    height: 1.75rem;
+    margin-right: 2rem;
+    fill: currentColor; }
+
+.sidebar .legal {
+  font-size: 1.2rem;
+  color: #ccc;
+  text-align: center;
+  padding: 2.5rem; }
+
 .container {
   max-width: 120rem;
   margin: 8rem auto;
@@ -118,8 +163,12 @@ body {
 
 .sidebar {
   background-color: #333;
-  flex: 0 0 18%; }
+  flex: 0 0 18%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; }
 
 .hotel-view {
   background-color: #fff;
-  flex: 1; }
+  flex: 1;
+  height: 80rem; }
