--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -9,7 +9,7 @@
 .header{
     height: 7rem;
     background-color: #fff;
-    border-bottom: $color-grey-light-1;
+    border-bottom: 1px solid $color-grey-light-2;
     display: flex;
     justify-content: space-between;
     align-items: center;
