--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -276,3 +276,63 @@
         box-shadow: none;
     }
 }
+
+.paragraph:not(:last-of-type){
+    margin-bottom: 2rem;
+}
+
+.list{
+    list-style: none;
+    padding: 3rem 0;
+    margin: 3rem 0;
+    border-top:  1px solid $color-grey-light-2;
+    border-bottom:  1px solid $color-grey-light-2;
+
+    display: flex;
+    flex-wrap: wrap;
+
+    &__item{
+        flex: 0 0 50%;
+        margin-bottom: .7rem;
+    }
+
+    &__item::before{
+        content: "";
+        display: inline-block;
+        height: 1rem;
+        width: 1rem;
+        margin-right: .7rem;
+
+        // background-image: url("../img/chevron-thin-right.svg");
+        // background-size: cover;
+
+        background-color: $color-primary;
+        -webkit-mask-image: url("../img/chevron-thin-right.svg");
+        -webkit-mask-size: cover;
+        mask-image: url("../img/chevron-thin-right.svg");
+        mask-size: cover;
+    }
+}
+
+.recommend{
+    font-size: 1.3rem;
+    color: $color-grey-dark-3;
+    display: flex;
+    align-items: center;
+
+    &__count{
+        margin-right: auto;
+    }
+
+    &__photo{
+        box-sizing: content-box;
+        width: 4rem;
+        height: 4rem;
+        border-radius: 50%;
+        border: 3px solid white;
+
+        &:not(:last-child){
+            margin-right: -1.5rem;
+        }
+    }
+}
