--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -31,5 +31,23 @@
 .hotel-view{
     background-color: #fff;
     flex: 1;
-    height: 80rem;
+}
+
+.detail{
+    display: flex;
+    padding: 4.5rem;
+    background-color: $color-grey-light-1;
+    border-bottom: 1px solid $color-grey-light-2;
+}
+
+.description{
+    flex: 0 0 60%;
+    margin-right: 4.5rem;
+    box-shadow: 0 2rem 5rem rgba(0, 0, 0, .06);
+    padding: 3rem;
+    font-size: 1.4rem;
+}
+
+.user-reviews{
+    flex: 1;
 }
