--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -38,6 +38,7 @@
     padding: 4.5rem;
     background-color: $color-grey-light-1;
     border-bottom: 1px solid $color-grey-light-2;
+    font-size: 1.4rem;
 }
 
 .description{
@@ -50,4 +51,8 @@
 
 .user-reviews{
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+
