--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -406,3 +406,64 @@
         z-index: 1;
     }
 }
+
+.cta{
+    padding: 3.5rem 0;
+    text-align: center;
+
+    &__book-now{
+        font-size: 2rem;
+        font-weight: 300;
+        text-transform: uppercase;
+        margin-bottom: 2.5rem;
+    }
+}
+
+.btn{
+    font-size: 1.5rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    border: none;
+    border-radius: 100px;
+    background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
+    color: white;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+
+    & > *{
+        display: inline-block;
+        transition: all .2s;
+    }
+
+    &__visible{
+        padding: 2rem 7.5rem;
+    }
+
+    &__invisible{
+        position: absolute;
+        padding: 2rem 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        top: -100%;
+    }
+
+    &:hover{
+        background-image: linear-gradient(to left, $color-primary-light, $color-primary-dark);
+
+    }
+
+    &:hover &__visible{
+        transform: translateY(100%);
+    }
+
+    &:hover &__invisible{
+        top: 0;
+    }
+
+    &:focus{
+        outline: none;
+        animation: pulsate 1s infinite;
+    }
+}
