--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -11,6 +11,12 @@
         align-items: center;
         justify-content: center;
 
+        @media only screen and (max-width: $bp-smallest) {
+            order: 1;
+            flex: 0 0 100%;
+            background-color: $color-grey-light-2;
+        }
+
         &__input{
             font-family: inherit;
             font-size: inherit;
@@ -115,12 +121,24 @@
         font-size: 1.4rem;
         list-style: none;
         margin-top: 3.5rem;
+        
+        @media only screen and (max-width: $bp-medium) {
+            display: flex;
+            margin: 0;
+        }
 
         &__item{
             position: relative;
 
             &:not(:last-child){
                 margin-bottom: .5rem;
+                @media only screen and (max-width: $bp-medium) {
+                    margin: 0;
+                }
+            }
+            
+            @media only screen and (max-width: $bp-medium) {
+                flex: 1;
             }
         }
         &__item::before{
@@ -154,6 +172,16 @@
             position: relative;
             align-items: center;
             z-index: 10;
+
+            @media only screen and (max-width: $bp-medium) {
+                justify-content: center;
+                padding: 2rem;
+            }
+
+            @media only screen and (max-width: $bp-small) {
+                flex-direction: column;
+                padding: 1.5rem .5rem;
+            }
         }
 
         &__icon{
@@ -161,6 +189,14 @@
             height: 1.75rem;
             margin-right: 2rem;
             fill: currentColor;
+
+            @media only screen and (max-width: $bp-small) {
+                margin-right: 0;
+                margin-bottom: .7rem;
+                width: 1.5rem;
+                height: 1.5rem;
+            }
+
         }
     }
 
@@ -169,7 +205,9 @@
         color: $color-grey-light-4;
         text-align: center;
         padding: 2.5rem;
-
+        @media only screen and (max-width: $bp-medium) {
+            display: none;
+        }
     }
 }
 
@@ -193,6 +231,11 @@
         text-transform: uppercase;
         letter-spacing: 1px;
         padding: 1.5rem 3rem;
+
+        @media only screen and (max-width: $bp-small) {
+            font-size: 1.8rem;
+            padding: 1.25rem 2rem;
+        }
     }
 
     &__stars{
@@ -226,17 +269,29 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+
+        @media only screen and (max-width: $bp-small) {
+            padding: 0 1.5rem;
+        }
     }
 
     &__rating-average{
         font-size: 2.25rem;
         font-weight: 300;
         margin-bottom: -3px;
+
+        @media only screen and (max-width: $bp-small) {
+            font-size: 1.8rem;
+        }
     }
 
     &__rating-count{
         font-size: .8rem;
         text-transform: uppercase;
+
+        @media only screen and (max-width: $bp-small) {
+            font-size: .5rem;
+        }
     }
     
 }
@@ -333,6 +388,10 @@
         margin-right: auto;
     }
 
+    &__friends{
+        display: flex;
+    }
+
     &__photo{
         box-sizing: content-box;
         width: 4rem;
@@ -341,7 +400,7 @@
         border: 3px solid white;
 
         &:not(:last-child){
-            margin-right: -1.5rem;
+            margin-right: -2rem;
         }
     }
 }
@@ -353,6 +412,11 @@
     margin-bottom: 3.5rem;
     position: relative;
     overflow: hidden;
+
+    @media only screen and (max-width: $bp-medium) {
+        padding: 2rem;
+        margin-bottom: 3rem;
+    }
 
     &__text{
         margin-bottom: 2rem;
@@ -410,7 +474,9 @@
 .cta{
     padding: 3.5rem 0;
     text-align: center;
-
+    @media only screen and (max-width: $bp-medium) {
+        padding: 2.5rem 0;
+    }
     &__book-now{
         font-size: 2rem;
         font-weight: 300;
