--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -4,6 +4,12 @@
     background-color: $color-grey-light-2;
     box-shadow: $shadow-dark;
     min-height: 50rem;
+
+    @media only screen and (max-width: $bp-largest) {
+        margin: 0;
+        max-width: 100%;
+        width: 100%;
+    }
 }
 
 .header{
@@ -14,10 +20,19 @@
     justify-content: space-between;
     align-items: center;
     font-size: 1.4rem;
+
+    @media only screen and (max-width: $bp-smallest) {
+        flex-wrap: wrap;
+        align-content: space-around;
+        height: 11rem;
+    }
 }
 
 .content{
     display: flex;
+    @media only screen and (max-width: $bp-medium) {
+        flex-direction: column;
+    }
 }
 
 .sidebar{
@@ -39,6 +54,14 @@
     background-color: $color-grey-light-1;
     border-bottom: 1px solid $color-grey-light-2;
     font-size: 1.4rem;
+
+    @media only screen and (max-width: $bp-medium) {
+        padding: 3rem;
+    }
+
+    @media only screen and (max-width: $bp-small) {
+        flex-direction: column;
+    }
 }
 
 .description{
@@ -47,6 +70,16 @@
     box-shadow: 0 2rem 5rem rgba(0, 0, 0, .06);
     padding: 3rem;
     font-size: 1.4rem;
+
+    @media only screen and (max-width: $bp-medium) {
+        margin-right: 3rem;
+        padding: 2rem;
+    }
+
+    @media only screen and (max-width: $bp-small) {
+        margin-right: 0;
+        margin-bottom: 3rem;
+    }
 }
 
 .user-reviews{
