--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -367,14 +367,17 @@
         width: 1rem;
         margin-right: .7rem;
 
-        // background-image: url("../img/chevron-thin-right.svg");
-        // background-size: cover;
+        background-image: url("../img/chevron-thin-right.svg");
+        background-size: cover;
 
-        background-color: $color-primary;
-        -webkit-mask-image: url("../img/chevron-thin-right.svg");
-        -webkit-mask-size: cover;
-        mask-image: url("../img/chevron-thin-right.svg");
-        mask-size: cover;
+        @supports (-webkit-mask-image: url()) or (mask-image: url()){
+            background-color: $color-primary;
+            -webkit-mask-image: url("../img/chevron-thin-right.svg");
+            -webkit-mask-size: cover;
+            mask-image: url("../img/chevron-thin-right.svg");
+            mask-size: cover;
+        }
+
     }
 }
 
